[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/BebasNeue Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menus/YouWonText.gd" type="Script" id=2]
[ext_resource path="res://src/menus/MainMenuButton.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 112
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 1 )

[node name="YouWonText" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Text" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -163.0
margin_top = -170.0
margin_right = 163.0
margin_bottom = 240.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouWonLabel" type="Label" parent="Text"]
margin_right = 326.0
margin_bottom = 112.0
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "You Won!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThankYouLabel" type="Label" parent="Text"]
margin_top = 122.0
margin_right = 326.0
margin_bottom = 170.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 5
text = "Thanks for playing!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevelButton" parent="Text" instance=ExtResource( 3 )]
margin_top = 180.0
margin_right = 326.0
margin_bottom = 250.0
text = "Next Level"

[node name="RestartButton" parent="Text" instance=ExtResource( 3 )]
margin_top = 260.0
margin_right = 326.0
margin_bottom = 330.0
text = "Restart"

[node name="MainMenuButton" parent="Text" instance=ExtResource( 3 )]
margin_top = 340.0
margin_right = 326.0
margin_bottom = 410.0
text = "Main Menu"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="Text/NextLevelButton" to="." method="_on_NextLevelButton_pressed"]
[connection signal="pressed" from="Text/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Text/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]

[editable path="Text/NextLevelButton"]
[editable path="Text/RestartButton"]
